--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "node server/index.js",
     "server": "nodemon server/index.js",
-    "client": "cd reactclient && npm start",
-    "dev": "concurrently \"npm start client\" && \"npm start server\" "
+    "client": "npm run start --prefix reactclient",
+    "dev": "concurrently \"npm run start\" \"npm run client\" "
   },
   "keywords": [],
   "author": "",
