--- a/reactclient/package.json
+++ b/reactclient/package.json
@@ -9,17 +9,22 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "antd": "^5.4.7",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
+    "html-react-parser": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.8.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
-    "react-router-dom": "^6.11.0",
+    "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.10",
     "toastify": "^2.0.1",
